samples/_failures_safe/1761362793_ca194a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97ec9a45.c: In function ‘main’:
./samples/SAFE/__tmp_97ec9a45.c:143:25: error: expected ‘;’ at end of input
  143 |     mat2.cols = read_int
      |                         ^
      |                         ;
./samples/SAFE/__tmp_97ec9a45.c:143:5: error: expected declaration or statement at end of input
  143 |     mat2.cols = read_int
      |     ^~~~
